# hjem

./: CNAME  CONTRIBUTING.md  README.md  default.nix  extending.html  flake.nix  index.html  lib.nix  options.html  search.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: checks.yml  deploy-docs.yml  update-inputs.yml  vm-tests.yml
assets/: search-data.json
cli/: .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  package.nix
cli/crates/hjem/: Cargo.toml
cli/crates/hjem-core/: Cargo.toml
cli/crates/hjem-core/src/: lib.rs
cli/crates/hjem/src/: main.rs
cli/src/: main.rs
docs/: package.nix
docs/inputs/: extending.md  file-types.md  index.md  standalone.md
internal/: checks.nix  finix-checks.nix  flake-parse.nix  packages.nix  pkgs.nix  rust-shell.nix  shell.nix
manifest/: v1.cue  v2.cue
modules/: common.nix  nixos.nix
modules/common/: top-level.nix  user.nix
modules/darwin/: default.nix
modules/finix/: base.nix
modules/nix-darwin/: base.nix  default.nix
modules/nixos/: base.nix  default.nix  systemd.nix
npins/: sources.json
tests/: basic.nix  linker-reboot.nix  linker.nix  no-users-linker.nix  parser.nix  recursive.nix  special-args.nix  standalone.nix  systemd-reload.nix  xdg-linker.nix  xdg.nix
tests/nixos/: linker.nix  special-args.nix  standalone.nix  systemd-reload.nix  xdg.nix
