[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
homepage = "https://hjem.feel-co.org"
repository = "https://github.com/feel-co/hjem"

[workspace.dependencies]
hjem-core = { path = "crates/hjem-core", version = "0.1.0" }

clap = { version = "4.6.1", features = ["derive"] }
chrono = { version = "0.4.42", default-features = false, features = [
  "std",
  "clock",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
smfh-core = "1.5.0"
