[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
version    = "0.2.0"
edition    = "2024"
license    = "MPL-2.0"
homepage   = "https://hjem.feel-co.org"
repository = "https://github.com/feel-co/hjem"

[workspace.dependencies]
hjem-core = { path = "crates/hjem-core", version = "0.2.0" }

jiff       = "0.2.34"
pound      = "0.1.6"
serde      = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
smfh-core  = "1.7.0"
